@@ -1,46 +1,51 @@
 package com.example.appserver.common;
 
 import com.example.appserver.common.dict.Constants;
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.redis.core.StringRedisTemplate;
 import org.springframework.util.Base64Utils;
-import sun.misc.BASE64Decoder;
-import sun.misc.BASE64Encoder;
 
+import javax.annotation.Resource;
 import javax.crypto.BadPaddingException;
 import javax.crypto.Cipher;
 import javax.crypto.IllegalBlockSizeException;
 import javax.crypto.NoSuchPaddingException;
 import java.io.ByteArrayOutputStream;
 import java.io.IOException;
+import java.nio.charset.StandardCharsets;
 import java.security.*;
 import java.security.interfaces.RSAPrivateKey;
 import java.security.interfaces.RSAPublicKey;
 import java.security.spec.InvalidKeySpecException;
 import java.security.spec.PKCS8EncodedKeySpec;
 import java.security.spec.X509EncodedKeySpec;
+import java.util.Base64;
 import java.util.HashMap;
 import java.util.Map;
 
+/**
+ * @author dsl
+ */
 public class EncodeUtil {
 
+    private static final String UTF_ENCODING_UTF8 = "utf-8";
 
-    @Autowired
+    @Resource
     private StringRedisTemplate redisTemplate;
 
     /**
      * 初始化公钥私钥，生成公私钥
-     * @return
-     * @throws Exception
+     * @return 放了公钥私钥的map
+     * @throws NoSuchAlgorithmException 不支持RSA则会抛出改异常
      */
     public static Map<String, Object> initKey() throws NoSuchAlgorithmException {
+        //RSA
         KeyPairGenerator keyPairGen = KeyPairGenerator
                 .getInstance(Constants.KEY_ALGORITHM);
         keyPairGen.initialize(1024);
         KeyPair keyPair = keyPairGen.generateKeyPair();
         RSAPublicKey publicKey = (RSAPublicKey) keyPair.getPublic();
         RSAPrivateKey privateKey = (RSAPrivateKey) keyPair.getPrivate();
-        Map<String, Object> keyMap = new HashMap<String, Object>(2);
+        Map<String, Object> keyMap = new HashMap<>(2);
         keyMap.put(Constants.PUBLIC_KEY, publicKey);
         keyMap.put(Constants.PRIVATE_KEY, privateKey);
         return keyMap;
@@ -48,14 +53,14 @@ public class EncodeUtil {
 
     /**
      * 获取公钥字符串
-     * @param keyMap
+     * @param keyMap 密钥
      * @return
      */
     public static String createPublicKeyStr(Map<String,Object> keyMap){
         //获取公钥对象转换为key
         Key key = (Key) keyMap.get(Constants.PUBLIC_KEY);
         //编码返回字符串
-        return encryptBASE64(key.getEncoded());
+        return encryptBase64(key.getEncoded());
     }
 
     /**
@@ -66,7 +71,7 @@ public class EncodeUtil {
     public static String createPrivateKeyStr(Map<String,Object> keyMap){
         //获取私钥对象，转换为key
         Key key = (Key) keyMap.get(Constants.PRIVATE_KEY);
-        return encryptBASE64(key.getEncoded());
+        return encryptBase64(key.getEncoded());
     }
 
     /**
@@ -74,8 +79,9 @@ public class EncodeUtil {
      * @param key
      * @return
      */
-    public static String encryptBASE64(byte[] key){
-        return (new BASE64Encoder()).encodeBuffer(key);
+    public static String encryptBase64(byte[] key){
+        byte[] encode = Base64.getEncoder().encode(key);
+        return new String(encode, StandardCharsets.UTF_8);
     }
 
     /**
@@ -85,14 +91,14 @@ public class EncodeUtil {
      */
     public static PublicKey createPublicKey(String key) throws IOException, NoSuchAlgorithmException, InvalidKeySpecException {
         //对传入的key进行解码
-        byte[] keyBytes = (new BASE64Decoder()).decodeBuffer(key);
+        Base64.Decoder decoder = Base64.getDecoder();
+        byte[] keyBytes = decoder.decode(key);
         //构造X509EncodedKeySpec对象
         X509EncodedKeySpec keySpec = new X509EncodedKeySpec(keyBytes);
         //指定加密算法
         KeyFactory keyFactory = KeyFactory.getInstance(Constants.KEY_ALGORITHM);
         //获取私钥对象
-        PublicKey publicKey = keyFactory.generatePublic(keySpec);
-        return publicKey;
+        return keyFactory.generatePublic(keySpec);
     }
 
     /**
@@ -100,12 +106,12 @@ public class EncodeUtil {
      * @param key
      * @return
      */
-    public static PrivateKey createPrivateKey(String key) throws IOException, NoSuchAlgorithmException, InvalidKeySpecException {
-        byte[] keyBytes = (new BASE64Decoder()).decodeBuffer(key);
+    public static PrivateKey createPrivateKey(String key) throws NoSuchAlgorithmException, InvalidKeySpecException {
+        Base64.Decoder decoder = Base64.getDecoder();
+        byte[] keyBytes = decoder.decode(key);
         PKCS8EncodedKeySpec keySpec = new PKCS8EncodedKeySpec(keyBytes);
         KeyFactory keyFactory = KeyFactory.getInstance(Constants.KEY_ALGORITHM);
-        PrivateKey privateKey = keyFactory.generatePrivate(keySpec);
-        return privateKey;
+        return keyFactory.generatePrivate(keySpec);
     }
 
 
@@ -144,9 +150,9 @@ public class EncodeUtil {
             i++;
             tmp = i * Constants.MAX_ENCRYPT_BLOCK;
         }
-        byte[] encryp = out.toByteArray();
+        byte[] encrypt = out.toByteArray();
         out.close();
-        return encryp;
+        return encrypt;
     }
 
     /**
@@ -232,18 +238,18 @@ public class EncodeUtil {
      * @param str
      * @return
      */
-    public final static String md5(String str){
+    public static String md5(String str){
         MessageDigest messageDigest = null;
+        String result = null;
         try {
             messageDigest = MessageDigest.getInstance("MD5");
         } catch (NoSuchAlgorithmException e) {
             e.printStackTrace();
         }
-        messageDigest.update(str.getBytes());
-        return Base64Utils.encodeToString(messageDigest.digest());
+        if (messageDigest!=null) {
+            messageDigest.update(str.getBytes());
+            result = Base64Utils.encodeToString(messageDigest.digest());
+        }
+        return result;
     }
-
-
-
-
 }
